<resources>
    <string name="app_name" translatable="false">Rescue My Life</string>
    <string name="PhoneNumber">Phone numbers of Recipients:</string>
    <string name="Message">Message:</string>
    <string name="Timer">Inactivity timer:</string>
    <string name="Days">Days</string>
    <string name="Hours">Hours</string>
    <string name="Minutes">Minutes</string>
    <string name="Notif">Notifications</string>
    <string name="SendSMS">Send SMS</string>
    <string name="SOS" translatable="false">SOS</string>
    <string name="Start">START</string>
    <string name="Stop">STOP</string>
    <string name="PhoneNumberHint">Up to 3 numbers, sep. by comma</string>
    <string name="MessageHint">Default message</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="SOS_message">Rescue My Life. I need help!</string>
    <string name="N_message">Rescue My Life: user\'s device not moving for</string>
    <string name="ERR_NUM">ERROR: Add phone number.</string>
    <string name="MSG_sent">Message sent</string>
    <string name="MSG_alarm">"Alarm set to: "</string>
</resources>
