<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maxku.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/Message"
        android:textColor="@color/colorText1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/Timer"
        android:textColor="@color/colorText1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="7dp"
        android:text="@string/Days"
        android:textAlignment="center"
        android:textColor="@color/colorText1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDays" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="34dp"
        android:layout_marginTop="6dp"
        android:text="@string/Minutes"
        android:textAlignment="center"
        android:textColor="@color/colorText1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMins" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:text="@string/Hours"
        android:textAlignment="center"
        android:textColor="@color/colorText1"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toLeftOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/editHours" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/PhoneNumber"
        android:textColor="@color/colorText1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/PhoneNumberHint"
        android:inputType="phone"
        android:maxLength="43"
        android:selectAllOnFocus="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/CONT_button"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/MessageHint"
        android:inputType="textShortMessage"
        android:maxLength="160"
        android:selectAllOnFocus="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editHours"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toRightOf="@+id/editDays"
        app:layout_constraintRight_toLeftOf="@+id/editMins"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editMins"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="1"
        android:inputType="number"
        android:maxLength="2"
        android:selectAllOnFocus="true"
        android:text="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/editDays"
        android:layout_width="89dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="0"
        android:inputType="number"
        android:maxLength="1"
        android:selectAllOnFocus="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/toggle_button"
        android:textColor="@color/colorText1"
        android:textOff="@string/Start"
        android:textOn="@string/Stop"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkSMS"
        app:layout_constraintVertical_bias="0.542" />

    <CheckBox
        android:id="@+id/checkSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:checked="false"
        android:text="@string/SendSMS"
        android:textAlignment="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <CheckBox
        android:id="@+id/checkNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:checked="false"
        android:text="@string/Notif"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/SOSbutton"
        android:layout_width="110dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/SOS"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkNot"
        app:layout_constraintVertical_bias="0.542" />

    <Button
        android:id="@+id/CONT_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/cont_button"
        android:text="+"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</android.support.constraint.ConstraintLayout>
